<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/recipes_fragment">

    <fragment
        android:id="@+id/recipes_fragment"
        android:name="hikariya.recipes.recipes.RecipesFragment"
        android:label="@string/book_of_recipes"
        tools:layout="@layout/fragment_recipes">
    </fragment>
    <fragment
        android:id="@+id/add_recipe_fragment"
        android:name="hikariya.recipes.addrecipe.AddRecipeFragment"
        android:label="@string/adding_recipe"
        tools:layout="@layout/add_recipe_fragment">
        <action
            android:id="@+id/action_addRecipeFragment_to_recipesFragment"
            app:destination="@id/recipes_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:popEnterAnim="@anim/slide_in_right" />
    </fragment>
    <fragment
        android:id="@+id/about_fragment"
        android:name="hikariya.recipes.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

</navigation>