<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".hikariya.recipes.addrecipe.AddRecipeFragment">

            <TextView
                android:id="@+id/nameTextView"
                style="@style/textViewStyle"
                android:text="@string/recipe_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/nameEditText"
                style="@style/editTextStyle"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameTextView" />

            <TextView
                android:id="@+id/nameRecipeWarning"
                android:text="Такое название уже существует"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameEditText"
                android:height="0dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/horizontal_margin"
                android:textColor="@color/red"/>

            <TextView
                android:id="@+id/ingredientsTextView"
                style="@style/textViewStyle"
                android:text="@string/ingredients"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameRecipeWarning" />

            <Button
                android:id="@+id/addIngredientButton"
                style="@style/buttonStyle"
                android:text="@string/add_ingredient"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingredientsTextView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredientsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addIngredientButton" />

            <TextView
                android:id="@+id/stepsTextView"
                style="@style/textViewStyle"
                android:text="@string/steps"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingredientsList" />

            <EditText
                android:id="@+id/stepsEditText"
                style="@style/editTextStyle"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stepsTextView" />

            <Button
                android:id="@+id/editRecipeButton"
                style="@style/buttonStyle"
                android:text="@string/save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stepsEditText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>